feat: 添加Excel文件解析功能并支持多环境配置
新增`convertExcelUrlToHtml`函数用于将Excel文件转换为HTML表格，支持合并单元格和公式解析。同时，重构了API前缀配置，支持根据环境动态选择API地址。删除了不再使用的类型定义和测试文件。

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcp-server-salary-web",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "MCP server for using the salary Web API",
   "license": "MIT",
   "homepage": "",
@@ -20,7 +20,8 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "1.0.1",
     "@types/node-fetch": "^2.6.12",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   },
   "devDependencies": {
     "shx": "^0.3.4",
