--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rlj/mcp-server-salary-web",
-  "version": "0.0.10",
+  "name": "@rlj/salary-mcp",
+  "version": "0.0.11",
   "description": "MCP server for using the salary Web API",
   "license": "MIT",
   "homepage": "",
