--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rlj/salary-mcp",
-  "version": "0.0.24",
+  "version": "0.0.25",
   "description": "MCP server for using the salary Web API",
   "license": "MIT",
   "homepage": "",
@@ -21,7 +21,9 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "1.0.1",
     "@types/node-fetch": "^2.6.12",
+    "marked": "^15.0.12",
     "node-fetch": "^3.3.2",
+    "puppeteer": "^24.10.2",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   },
   "devDependencies": {
